# psn-website-backend

./: .flake8  .gitignore  create_admin.py  pyproject.toml  requirements.txt  serverless.yaml
alembic/: env.py
alembic/versions/: a13bcda432ba_create_adverts_table_2.py  af0b500c2f97_added_tags_to_news.py  e5675a8cca91_create_adverts_table.py  f389e07b7529_added_group_to_news.py
src/: health.py  mail.py  main.py
src/adverts/: models.py  routes.py  schemas.py  services.py
src/contact/: routes.py  schemas.py
src/core/: cloudinary_config.py  config.py  dependencies.py  security.py
src/db/: __init__.py  connection.py  redis.py  session.py
src/middlewares/: __init__.py  cors.py  cors_trusted_host.py  logging.py  rate_limit.py
src/news/: models.py  routes.py  schemas.py  services.py
src/pharmacists/: models.py  routes.py  schemas.py  services.py
src/quiz/: models.py  routes.py  schemas.py  services.py
src/users/: models.py  routes.py  schemas.py  services.py
src/utils/: cloudinary.py  image_upload.py  link_resolver.py  slug.py  slugify.py  url_token.py
